--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,10 +1,9 @@
 {
-	"recommendations": [
-		"esbenp.prettier-vscode",
-		"dbaeumer.vscode-eslint",
-		"tamasfe.even-better-toml",
-		"codezombiech.gitignore",
-		"christian-kohler.npm-intellisense",
-		"christian-kohler.path-intellisense"
-	]
+  "recommendations": [
+    "biomejs.biome",
+    "foxundermoon.shell-format",
+    "codezombiech.gitignore",
+    "christian-kohler.npm-intellisense",
+    "christian-kohler.path-intellisense"
+  ]
 }
