--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "bun-types": "^1.1.20",
     "typescript": "^5.5.4",
     "zod": "^3.23.8"
-  }
+  },
+  "trustedDependencies": [
+    "@biomejs/biome"
+  ]
 }
